# phoenix-sdk

rust/crates/: Cargo.toml
rust/crates/phoenix-sdk/: Cargo.toml
rust/crates/phoenix-sdk-core/: Cargo.toml
