[workspace]
resolver = "2"
members = [
    "phoenix-sdk",
    "phoenix-sdk-core"
]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
spl-token = { version = "*", features = ["no-entrypoint"] }
anyhow = "*" 
solana-account-decoder = "*"
solana-sdk = "*"
solana-client = "*"
borsh = "*"
rand = "*"
ellipsis-client = {git = "https://github.com/florian-klein/ellipsis-client.git"}
ellipsis-transaction-utils =  {git = "https://github.com/florian-klein/ellipsis-client.git"}
phoenix-common = {git = "https://github.com/florian-klein/phoenix-v1.git", branch = "crate"}
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
shellexpand = "*"
num-traits = "*"
rust_decimal = "*"
rust_decimal_macros = "*"
itertools = "*"
bytemuck = "*"
serde = "*"
phoenix-seat-manager-common = {git = "https://github.com/florian-klein/phoenix-seat-manager-v1.git", branch = "crate"}
