cargo-features = ["workspace-inheritance"]

[package]
name = "phoenix-sdk"
version = "0.8.0"
description = "SDK for interacting with the Phoenix program"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
phoenix-common = { workspace = true }
phoenix-seat-manager-common = { workspace = true }
spl-token = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
ellipsis-client = { workspace = true }
bytemuck = { workspace = true }
phoenix-sdk-core = { version = "*", path = "../phoenix-sdk-core" }
serde = { workspace = true }

